[package]
name = "github-backup"
version = "0.2.2"
edition = "2021"
authors = ["Adrian Tombu <adrian@otso.fr>"]
keywords = ["cli", "backup", "git", "github"]
categories = ["command-line-utilities", "web-programming"]
description = "Backup all your GitHub repositories with a single command"
license = "MIT"
repository = "https://github.com/adriantombu/github-backup"
include = ["/src", "LICENSE.md", "README.md"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
clap = { version = "3.2.13", features = ["derive"] }
which = "4.2.5"
directories = "4.0.1"
toml = "0.5.9"
indicatif = "0.17.0"
console = "0.15.1"
dialoguer = "0.10.2"
anyhow = "1.0.64"
