[package]
name = "github-backup"
version = "0.2.3"
edition = "2021"
authors = ["Adrian Tombu <adrian@otso.fr>"]
keywords = ["cli", "backup", "git", "github"]
categories = ["command-line-utilities", "web-programming"]
description = "Backup all your GitHub repositories with a single command"
license = "MIT"
repository = "https://github.com/adriantombu/github-backup"
include = ["/src", "LICENSE.md", "README.md"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
which = "6.0"
directories = "5.0"
toml = "0.8"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
anyhow = "1.0"
